--- a/vignettes/msgbsR_Vignette.Rnw
+++ b/vignettes/msgbsR_Vignette.Rnw
@@ -40,7 +40,7 @@ To read in the data directly into R can be done using the rawCounts() function, 
 <<load the example data>>=
 library(msgbsR)
 
-my_path <- system.file("extdata", "sample1.bam", package = 'gbsR')
+my_path <- system.file("extdata", "sample1.bam", package = 'msgbsR')
 my_path <- gsub('sample1.bam', '', my_path)
 
 datCounts <- rawCounts(bamFilepath = my_path, threads = 1)
@@ -183,7 +183,7 @@ The msgbsR package can also work with gff files to annotate interesting position
 
 To annotate interesting cut sites:
 <<annotation>>=
-mygff <- system.file("extdata", "chr1.gff3", package = 'gbsR')
+mygff <- system.file("extdata", "chr1.gff3", package = 'msgbsR')
 features <- closestFeat(gff = mygff, positions = z[1:100,], strand.specific = FALSE)
 head(features)
 @
