--- a/vignettes/msgbsR_Vignette.Rnw
+++ b/vignettes/msgbsR_Vignette.Rnw
@@ -10,6 +10,7 @@
 \usepackage{hyperref}
 
 % \VignetteIndexEntry{msgbsR_Example}
+%\VignetteEngine{knitr::knitr}
 
 \begin{document}
 \SweaveOpts{concordance=TRUE}
