--- a/vignettes/msgbsR_Vignette.tex
+++ b/vignettes/msgbsR_Vignette.tex
@@ -10,6 +10,7 @@
 \usepackage{hyperref}
 
 % \VignetteIndexEntry{msgbsR_Example}
+%\VignetteEngine{knitr::knitr}
 
 \usepackage{Sweave}
 \begin{document}
@@ -246,7 +247,7 @@ Platform: x86_64-w64-mingw32/x64 (64-bit)
 Running under: Windows 10 x64 (build 10586)
 
 locale:
-[1] LC_COLLATE=C                       LC_CTYPE=English_Australia.1252   
+[1] LC_COLLATE=English_Australia.1252  LC_CTYPE=English_Australia.1252   
 [3] LC_MONETARY=English_Australia.1252 LC_NUMERIC=C                      
 [5] LC_TIME=English_Australia.1252    
 
@@ -260,53 +261,51 @@ other attached packages:
  [5] XVector_0.12.1                      GenomicRanges_1.24.3               
  [7] GenomeInfoDb_1.8.7                  IRanges_2.6.1                      
  [9] S4Vectors_0.10.3                    BiocGenerics_0.18.0                
-[11] ggplot2_2.2.0                       msgbsR_0.99.0                      
+[11] ggplot2_2.2.0                       msgbsR_0.99.5                      
 
 loaded via a namespace (and not attached):
- [1] bitops_1.0-6                  devtools_1.12.0              
- [3] RColorBrewer_1.1-2            httr_1.2.1                   
- [5] tools_3.3.1                   R6_2.1.3                     
- [7] rpart_4.1-10                  Hmisc_3.17-4                 
- [9] DBI_0.5                       lazyeval_0.2.0               
-[11] colorspace_1.2-6              nnet_7.3-12                  
-[13] withr_1.0.2                   gridExtra_2.2.1              
-[15] GGally_1.2.0                  chron_2.3-47                 
-[17] graph_1.50.0                  Biobase_2.32.0               
-[19] labeling_0.3                  ggbio_1.20.2                 
-[21] scales_0.4.1                  genefilter_1.54.2            
-[23] RBGL_1.48.1                   DESeq_1.24.0                 
-[25] stringr_1.1.0                 digest_0.6.10                
-[27] Rsamtools_1.24.0              foreign_0.8-66               
-[29] genomeIntervals_1.28.0        R.utils_2.5.0                
-[31] dichromat_2.0-0               htmltools_0.3.5              
-[33] ensembldb_1.4.7               limma_3.28.21                
-[35] easyRNASeq_2.8.2              RSQLite_1.0.0                
-[37] BiocInstaller_1.22.3          shiny_0.13.2                 
-[39] hwriter_1.3.2                 BiocParallel_1.6.6           
-[41] acepack_1.3-3.3               R.oo_1.20.0                  
-[43] VariantAnnotation_1.18.7      RCurl_1.95-4.8               
-[45] magrittr_1.5                  Formula_1.2-1                
-[47] Matrix_1.2-6                  Rcpp_0.12.6                  
-[49] munsell_0.4.3                 R.methodsS3_1.7.1            
-[51] stringi_1.1.1                 edgeR_3.14.0                 
-[53] SummarizedExperiment_1.2.3    zlibbioc_1.18.0              
-[55] plyr_1.8.4                    AnnotationHub_2.4.2          
-[57] grid_3.3.1                    lattice_0.20-33              
-[59] splines_3.3.1                 GenomicFeatures_1.24.5       
-[61] annotate_1.50.1               locfit_1.5-9.1               
-[63] geneplotter_1.50.0            reshape2_1.4.1               
-[65] biomaRt_2.28.0                XML_3.98-1.4                 
-[67] ShortRead_1.30.0              biovizBase_1.20.0            
-[69] latticeExtra_0.6-28           data.table_1.9.6             
-[71] httpuv_1.3.3                  gtable_0.2.0                 
-[73] reshape_0.8.5                 assertthat_0.1               
-[75] mime_0.5                      xtable_1.8-2                 
-[77] roxygen2_5.0.1                survival_2.39-4              
-[79] tibble_1.2                    intervals_0.15.1             
-[81] OrganismDbi_1.14.1            GenomicAlignments_1.8.4      
-[83] AnnotationDbi_1.34.4          memoise_1.0.0                
-[85] cluster_2.0.4                 LSD_3.0                      
-[87] interactiveDisplayBase_1.10.3
+ [1] Biobase_2.32.0                httr_1.2.1                   
+ [3] edgeR_3.14.0                  AnnotationHub_2.4.2          
+ [5] splines_3.3.1                 R.utils_2.5.0                
+ [7] genomeIntervals_1.28.0        Formula_1.2-1                
+ [9] shiny_0.13.2                  assertthat_0.1               
+[11] interactiveDisplayBase_1.10.3 latticeExtra_0.6-28          
+[13] RBGL_1.48.1                   Rsamtools_1.24.0             
+[15] RSQLite_1.0.0                 lattice_0.20-33              
+[17] biovizBase_1.20.0             limma_3.28.21                
+[19] digest_0.6.10                 chron_2.3-47                 
+[21] RColorBrewer_1.1-2            colorspace_1.2-6             
+[23] ggbio_1.20.2                  httpuv_1.3.3                 
+[25] htmltools_0.3.5               Matrix_1.2-6                 
+[27] R.oo_1.20.0                   plyr_1.8.4                   
+[29] OrganismDbi_1.14.1            XML_3.98-1.4                 
+[31] ShortRead_1.30.0              biomaRt_2.28.0               
+[33] genefilter_1.54.2             zlibbioc_1.18.0              
+[35] xtable_1.8-2                  scales_0.4.1                 
+[37] intervals_0.15.1              BiocParallel_1.6.6           
+[39] LSD_3.0                       tibble_1.2                   
+[41] annotate_1.50.1               SummarizedExperiment_1.2.3   
+[43] GenomicFeatures_1.24.5        easyRNASeq_2.8.2             
+[45] nnet_7.3-12                   lazyeval_0.2.0               
+[47] mime_0.5                      survival_2.39-4              
+[49] magrittr_1.5                  GGally_1.2.0                 
+[51] R.methodsS3_1.7.1             hwriter_1.3.2                
+[53] foreign_0.8-66                graph_1.50.0                 
+[55] BiocInstaller_1.22.3          tools_3.3.1                  
+[57] data.table_1.9.6              stringr_1.1.0                
+[59] munsell_0.4.3                 locfit_1.5-9.1               
+[61] cluster_2.0.4                 AnnotationDbi_1.34.4         
+[63] ensembldb_1.4.7               DESeq_1.24.0                 
+[65] grid_3.3.1                    RCurl_1.95-4.8               
+[67] dichromat_2.0-0               VariantAnnotation_1.18.7     
+[69] labeling_0.3                  bitops_1.0-6                 
+[71] gtable_0.2.0                  DBI_0.5                      
+[73] reshape_0.8.5                 reshape2_1.4.1               
+[75] R6_2.1.3                      GenomicAlignments_1.8.4      
+[77] gridExtra_2.2.1               Hmisc_3.17-4                 
+[79] stringi_1.1.1                 Rcpp_0.12.6                  
+[81] geneplotter_1.50.0            rpart_4.1-10                 
+[83] acepack_1.3-3.3              
 \end{Soutput}
 \end{Schunk}
 
